objects/npsp__Engagement_Plan_Task__c.object
<CustomObject>
    <description>An Engagement Plan Task defines the details of each task that is created when applying an Engagement Plan to a record.</description>
    <fields>
        <fullName>npsp__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field maps to the Task&apos;s Assigned To field. If left blank, the task will be assigned based on the template&apos;s Blank Assignment Rule.</description>
        <inlineHelpText>This field maps to the Task&apos;s Assigned To field. If left blank, the task will be assigned based on the template&apos;s Blank Assignment Rule.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Comments__c</fullName>
        <description>Comments on the Task.</description>
        <inlineHelpText>Comments on the Task.</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Days_After__c</fullName>
        <description>The number of days after the Engagement Plan creation date, or the parent Task&apos;s Due Date, that this Task is due.</description>
        <inlineHelpText>The number of days after the Engagement Plan creation date, or the parent Task&apos;s Due Date, that this Task is due.</inlineHelpText>
        <label>Days After</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Engagement_Plan_Template__c</fullName>
        <description>The Template for this Engagement Plan Task.</description>
        <inlineHelpText>The Template for this Engagement Plan Task.</inlineHelpText>
        <label>Engagement Plan Template</label>
        <referenceTo>npsp__Engagement_Plan_Template__c</referenceTo>
        <relationshipLabel>Engagement Plan Tasks</relationshipLabel>
        <relationshipName>Engagement_Plan_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npsp__Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates that this Engagement Plan Task is dependent on a Parent Task.</description>
        <inlineHelpText>Indicates that this Engagement Plan Task is dependent on a Parent Task.</inlineHelpText>
        <label>Parent Task</label>
        <referenceTo>npsp__Engagement_Plan_Task__c</referenceTo>
        <relationshipLabel>Engagement Plan Tasks</relationshipLabel>
        <relationshipName>Engagement_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Priority__c</fullName>
        <description>The priority of this Task.</description>
        <inlineHelpText>The priority of this Task.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Reminder_Time__c</fullName>
        <description>The time on the Due Date that a reminder appears.</description>
        <inlineHelpText>The time on the Due Date that a reminder appears.</inlineHelpText>
        <label>Reminder Time</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sets a reminder for the Task.</description>
        <inlineHelpText>Sets a reminder for the Task.</inlineHelpText>
        <label>Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if an email is sent to the user in the Task&apos;s Assigned To field when the Task becomes active. Dependent Tasks are active when their Parent Task is completed.</description>
        <inlineHelpText>Determines if an email is sent to the user in the Task&apos;s Assigned To field when the Task becomes active. Dependent Tasks are active when their Parent Task is completed.</inlineHelpText>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Status__c</fullName>
        <description>The Status of a Task. Dependent Tasks are set to &quot;Waiting on Parent Task&quot; until their Parent Task is completed.</description>
        <inlineHelpText>The Status of a Task. Dependent Tasks are set to &quot;Waiting on Parent Task&quot; until their Parent Task is completed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on someone else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Type__c</fullName>
        <description>The type of Task.</description>
        <inlineHelpText>The type of Task.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Engagement Plan Task</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Plan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>